--- a/4/index.html
+++ b/4/index.html
@@ -1,4 +1,4 @@
-<!-- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -19,6 +19,6 @@
 
     <script src="app.js"></script>
 </body>
-</html> -->
+</html>
 
  
